--- a/clinic/pom.xml
+++ b/clinic/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.1.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example.restaurant</groupId>
+	<groupId>com.example.clinic</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>clinic</name>
+	<description>Clinic project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
